# STELLA

./: .flake8  .gitignore  README.md  pyproject.toml
docs/: raspberry_setup.md
stella/: __main__.py
stella/gui/: controls.py  window.py
stella/tello/: client.py  constants.py  exceptions.py  state.py  stream.py
stella/utils/: files.py  logging.py
