[tool.poetry]
name = "stella"
version = "0.1.0"
description = "Ryze Tello desktop controller"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
