[tool.poetry]
name = "stella"
version = "0.3.0"
description = "Ryze Tello desktop controller"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
av = "^9.2.0"
numpy = "^1.22.4"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
