[tool.poetry]
name = "stella"
version = "0.3.0"
description = "Ryze Tello desktop controller"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
av = "^12.0.0"
numpy = "^1.26.4"
Pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.24.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
